--- a/silver_product/views/menus.xml
+++ b/silver_product/views/menus.xml
@@ -8,5 +8,13 @@
                   parent="silver_network.menu_isp_config"
                   action="action_product_brand"
                   sequence="13"/>
+
+
+        <menuitem id="silver_onu_profile_menu"
+                  name="ONU Profiles"
+                  parent="silver_network.menu_isp_config"
+                  action="action_silver_onu_profile"
+                  sequence="20"/>
+
     </data>
 </odoo>
