--- a/silver_provisioning/views/silver_olt_card_port_views.xml
+++ b/silver_provisioning/views/silver_olt_card_port_views.xml
@@ -12,7 +12,7 @@
 
 </xpath>
 <xpath expr="//field[@name='ip_address_ids']//tree" position="attributes">
-    <attribute name="default_order">contract_id desc, ip_int asc</attribute>
+    <attribute name="default_order">contract_id asc, public asc,ip_int asc</attribute>
 </xpath>
 
   <xpath expr="//page[1]" position="before">
