--- a/silver_provisioning/views/silver_olt_discovered_onu_views.xml
+++ b/silver_provisioning/views/silver_olt_discovered_onu_views.xml
@@ -9,7 +9,8 @@
                 <tree string="ONUs Descubiertas" editable="bottom">
                     <field name="olt_index"/>
                     <field name="serial_number"/>
-                    <field name="model_name"/>
+                    <!--field name="brand_id"/-->
+                    <field name="hardware_model_id"/>
                     <field name="password"/>
                     <field name="loid"/>
                     <field name="version"/>
