--- a/silver_product/views/silver_ap_views.xml
+++ b/silver_product/views/silver_ap_views.xml
@@ -8,8 +8,8 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='node_ids']"  position="after">
                     <field name="stock_lot_id"/>
-                    <field name="brand_name"/>
-                    <field name="model_name"/>
+                    <field name="brand_id"/>
+                    <field name="hardware_model_id"/>
                     <field name="software_version"/>
                     <field name="firmware_version"/>
                     <!--field name="serial_number"/-->
