--- a/silver_product/views/silver_olt_views.xml
+++ b/silver_product/views/silver_olt_views.xml
@@ -9,8 +9,9 @@
                 <xpath expr="//group[@name='olt']/group[1]" position="inside">
                     <separator string="Equipo"/>
                     <field name="stock_lot_id"/>
-                    <field name="brand_name"/>
-                    <field name="model_name"/>
+                    <field name="brand_id"/>
+                    <field name="hardware_model_id"/>
+
                     <field name="software_version"/>
                    <field name="firmware_version"/>
                     <!--field name="serial_number"/-->
