--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -90,8 +90,8 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
          <group string="Equipo" invisible="link_type != 'fiber'">
                                         <field name="stock_lot_id" readonly="state_service == 'active'"/>
-                    <field name="brand_name"/>
-                    <field name="model_name"/>
+                    <field name="brand_id"/>
+                    <field name="hardware_model_id"/>
                     <field name="software_version"/>
                     <field name="firmware_version"/>
                 <field name="mac_address_onu"/>
@@ -204,8 +204,8 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
 
      <group string="Equipo" invisible="link_type == 'fiber'">
                                         <field name="stock_lot_id" readonly="state_service == 'active'"/>
-                    <field name="brand_name"/>
-                    <field name="model_name"/>
+                    <field name="brand_id"/>
+                    <field name="hardware_model_id"/>
                     <field name="software_version"/>
                     <field name="firmware_version"/>
                 <field name="mac_address_onu"/>
