casi ya infrastructura

--- a/silver_contract/static/src/css/custom_styles.css
+++ b/silver_contract/static/src/css/custom_styles.css
@@ -40,3 +40,8 @@
 .status-default {
     background-color: #6B7280; /* Gris */
 }
+
+
+div:has(>div[name=discovered_onu_id]) {
+    width: 100% !important;
+}
