--- a/silver_product/views/silver_ap_views.xml
+++ b/silver_product/views/silver_ap_views.xml
@@ -10,8 +10,8 @@
                     <field name="stock_lot_id"/>
                     <field name="brand_id"/>
                     <field name="hardware_model_id"/>
-                    <field name="software_version"/>
-                    <field name="firmware_version"/>
+                    <!--field name="software_version"/>
+                    <field name="firmware_version"/-->
                     <!--field name="serial_number"/-->
                 </xpath>
             </field>
