--- a/silver_product/views/silver_core_views.xml
+++ b/silver_product/views/silver_core_views.xml
@@ -12,8 +12,8 @@
                     <field name="brand_id"/>
                     <field name="hardware_model_id"/>
 
-                    <field name="software_version"/>
-                   <field name="firmware_version"/>
+                  <!--field name="software_version"/>
+                    <field name="firmware_version"/-->
                      <!--field name="serial_number"/-->
                 </xpath>
             </field>
