--- a/silver_product/views/silver_radius_views.xml
+++ b/silver_product/views/silver_radius_views.xml
@@ -11,8 +11,8 @@
                     <field name="brand_id"/>
                     <field name="hardware_model_id"/>
 
-                    <field name="software_version"/>
-                   <field name="firmware_version"/>
+                    <!--field name="software_version"/>
+                    <field name="firmware_version"/-->
                     <!--field name="serial_number"/-->
                 </xpath>
             </field>
