--- a/silver_provisioning/views/silver_contract_views.xml
+++ b/silver_provisioning/views/silver_contract_views.xml
@@ -81,10 +81,15 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                            decoration-warning="olt_state in ('suspended', 'disabled')"
                            decoration-danger="olt_state in ['removed', 'down']"/>
 
+
                                                         <button name="action_suspend_service" string="Suspender Servicio" type="object" class="oe_highlight" invisible="(state not in ['open', 'active']) or (state_service != 'active')"/>
                     <button name="action_terminate_service" string="Dar de Baja" type="object" class="oe_highlight" invisible="(state not in ['open', 'active']) or (state_service not in ['suspended'])"/>
                     <button name="action_reconnection_service_button" type="object" class="oe_highlight" string="Restaurar Servicio" invisible="(state not in ['open', 'active']) or ( state_service not in ['terminated', 'suspended']) "/>
 
+                                    <field name="wan_state"  nolabel="1"
+                                               widget="badge"  invisible="(state not in ['open', 'active']) or (state_service != 'active')"
+                           decoration-success="wan_state in ['active', 'connected']"
+                           decoration-danger="wan_state in ['disconnected']"/>
 
                                     </group>
 
@@ -92,8 +97,9 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                         <field name="stock_lot_id" readonly="state_service == 'active'"/>
                     <field name="brand_id"/>
                     <field name="hardware_model_id"/>
-                    <field name="software_version"/>
-                    <field name="firmware_version"/>
+             <field name="profile_id"/>
+                    <!--field name="software_version"/>
+                    <field name="firmware_version"/-->
                 <field name="mac_address_onu"/>
 
                                         <field name="is_bridge" readonly="state_service == 'active'"/>
@@ -111,7 +117,7 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                         domain="[('node_id', '=', node_id)]"  invisible="link_type == 'fiber'"/>
                                         <field name="ap_id" readonly="state_service == 'active'" invisible="link_type != 'wifi'" domain="[('core_id', '=', core_id)]"/>
 
-        <field name="ip_address_ids"
+        <!--field name="ip_address_ids"
     order="public asc,  ip_int asc" widget="many2many_tags"
                        domain="['|',  ('olt_port_id', '=', olt_port_id),
                                   '|', ('olt_id', '=', olt_id),
@@ -124,8 +130,19 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                              domain="[( 'id', 'in', ip_address_ids) ]"
                                              invisible = "ip_address_count &lt;= 1"
                                     context="{'order_display': 'public asc,ip_int asc'}"
-                                    />
+                                    /-->
+  <field name="ip_address_id"
+                                             domain="[
+                                             '|',
+                                              '&amp;',
+                                             ('public', '=', False),
+                                             '|',  ('olt_port_id', '=', olt_port_id),
+                                  '|', ('olt_id', '=', olt_id),('core_id', '=', core_id),
 
+                                       '&amp;',  ('public', '=', True), '|', ('node_ids', 'in', node_id), ('core_ids', 'in', core_id)
+                                       ]"
+    context="{'search_default_group_by_pool_id': 1, 'alala': 2, 'order_display': 'public asc, olt_port_id desc, olt_id asc, ip_int asc'}"
+                                            />
 
                                         <field name="pppoe_user"/>
                                         <field name="pppoe_password" password="True"/>
@@ -155,9 +172,13 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                            decoration-danger="core_state in ['removed', 'down']"  nolabel="1" />
 
 </group> </group>
-                                        <group class="col-lg-3">
-
-             <button name="action_view_pppoe_traffic_chart" type="object" class="oe_stat_button" icon="fa-area-chart" string="Ver ONU" invisible="(state not in ['open', 'active']) or ( state_service not in ['active', 'suspended']) "/>
+                                        <group>
+                                             <button name="action_view_pppoe_traffic_chart"
+                                                     type="object"
+                                                    
+                                                     icon="fa-area-chart"
+                                                     string="PPP"
+                                                     invisible="(state_service != 'active') or (core_state not in ('active', 'connected'))"/>
                                         </group>
 
 
@@ -206,8 +227,9 @@ domain="[('node_id', '=', node_id), ('core_id', '=', core_id)]"
                                         <field name="stock_lot_id" readonly="state_service == 'active'"/>
                     <field name="brand_id"/>
                     <field name="hardware_model_id"/>
-                    <field name="software_version"/>
-                    <field name="firmware_version"/>
+         <field name="profile_id"/>
+                    <!--field name="software_version"/>
+                    <field name="firmware_version"/-->
                 <field name="mac_address_onu"/>
 
                                         <field name="is_bridge" readonly="state_service == 'active'"/>
