casi ya infrastructura

--- a/silver_product/views/silver_hardware_model_views.xml
+++ b/silver_product/views/silver_hardware_model_views.xml
@@ -8,6 +8,7 @@
                 <tree string="Hardware Models">
                     <field name="name"/>
                     <field name="brand_id"/>
+                                                <field name="etype"/>
                 </tree>
             </field>
         </record>
@@ -21,6 +22,8 @@
                         <group>
                             <field name="name"/>
                             <field name="brand_id"/>
+                            <field name="etype"/>
+                            <field name="manual"/>
                             <field name="onu_profile_id"/>
                             <field name="active"/>
                         </group>
